<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="binding"
            type="com.mobileapplication.uniquestboard.ui.questPublish.QuestPublishBinding" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                android:id="@+id/questPublishCard"
                app:cardBackgroundColor="@color/on_going_green"
                >
                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- Title -->
                    <EditText
                        android:id = "@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Title"
                        android:layout_marginBottom="15dp" />


                    <!-- Content -->

                        <EditText
                            android:id = "@+id/content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Content"
                            android:layout_marginBottom="15dp"/>

                    <!-- Image Upload -->
<!--                    <ImageView-->
<!--                        android:id="@+id/imageView"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:src="@drawable/side_nav_bar"-->
<!--                        android:adjustViewBounds="true"-->
<!--                        android:scaleType="fitCenter"-->
<!--                        android:layout_marginTop="8dp"-->
<!--                        android:layout_marginBottom="8dp"/>-->

                    <!-- Contact Methods -->


                    <EditText
                        android:id = "@+id/reward"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:hint="Reward"
                        android:text = "Gratitude"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/whatsappCheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="WhatsApp" />


                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="phone"
                                android:id="@+id/whatsappInputField"
                                android:enabled="false"
                                android:layout_marginLeft="8dp"
                                android:hint="Whatsapp Number"
                                 />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/instagramCheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Instagram" />


                        <EditText
                            android:id="@+id/instagramInputField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:layout_marginLeft="8dp"
                            android:hint="Username"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ExpireTime:"
                            ></TextView>
                        <EditText
                            android:id = "@+id/dateEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text = "12/11/2023"
                            android:textSize="14dp"
                            >
                        </EditText>
                        <EditText
                            android:id = "@+id/timeEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text = " 19:34"
                            android:textSize="14dp"
                            >

                        </EditText>
                    </LinearLayout>
                    <!-- Publish Button -->
                    <Button
                        android:id="@+id/publishButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Publish"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"/>

                    <!-- DatePicker -->

                </LinearLayout>



            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>